# HorizonGUI

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Main.cpp  README.md  conandata.yml  conanfile.py  install.sh
assets/: desktop.ini
dependencies/freetype/: CMakeCache.txt  CMakeLists.txt
dependencies/glfw/src/: CMakeLists.txt
documentation/: HorizonGUI-1.0.0.drawio
include/: AnimatedSprite.h  Audio.h  Buffer.h  Button.h  ButtonManager.h  Canvas.h  Circle.h  Coordinate.hpp  Define.h  Drawer.h  Font.h  FontManager.h  FrameBuffer.h  Function.h  GIF.h  HorizonGUI.h  Image.h  Iterator.hpp  KeyBoardManager.h  Label.h  Maths.hpp  MonitorManager.h  MouseManager.h  Rectangle.h  RenderBuffer.h  Renderer.h  ShaderManager.h  Shape.h  SliderManager.h  SoundPlayer.h  SoundPlayerManager.h  StraightLine.h  TagManager.h  TaskManager.h  TextInput.h  TextInputManager.h  Texture.h  TextureManager.h  Timer.h  Tools.h  (+6 more)
include/glad/: glad.h
include/hgui/: HorizonGUI.h
include/hgui/header/: AnimatedSprite.h  Audio.h  Buffer.h  BufferManager.h  Button.h  ButtonManager.h  Canva.h  CanvaManager.h  Canvas.h  CanvasManager.h  Circle.h  Coordinate.hpp  Cursor.h  CursorManager.h  Define.h  Drawer.h  Font.h  FontManager.h  FrameBuffer.h  Function.h  GIF.h  GLSL.h  Image.h  Include.h  Iterator.hpp  KeyBoardManager.h  Label.h  LabelManager.h  Maths.hpp  Matrix.hpp  Monitor.h  MonitorManager.h  MouseManager.h  Rectangle.h  RenderBuffer.h  RenderManager.h  Renderer.h  ResourceManager.h  Shader.h  ShaderManager.h  (+26 more)
python/: CMakeLists.txt  pyproject.toml
python/include/: Include.h  PyCoordinate.h  PyShape.h  PyWidgets.h  fwd.h  opaque.h
python/src/: PyCoordinate.cpp  PyData.cpp  PyEnum.cpp  PyFunction.cpp  PyManager.cpp  PyResources.cpp  PyShape.cpp  PyUtils.cpp  PyVector.cpp  PyWidgets.cpp  hgui.cpp
src/: AnimatedSprite.cpp  Audio.cpp  Buffer.cpp  BufferManager.cpp  Button.cpp  ButtonManager.cpp  Canva.cpp  CanvaManager.cpp  Canvas.cpp  CanvasManager.cpp  Circle.cpp  Cursor.cpp  CursorManager.cpp  Drawer.cpp  Font.cpp  FontManager.cpp  FrameBuffer.cpp  Function.cpp  GIF.cpp  Image.cpp  KeyBoardManager.cpp  Label.cpp  LabelManager.cpp  Monitor.cpp  MonitorManager.cpp  MouseManager.cpp  Rectangle.cpp  RenderBuffer.cpp  RenderManager.cpp  Renderer.cpp  ResourceManager.cpp  STBIimage.cpp  Shader.cpp  ShaderManager.cpp  Shape.cpp  Slider.cpp  SliderManager.cpp  SoundPlayer.cpp  SoundPlayerManager.cpp  Sprite.cpp  (+21 more)
src/dhgui/: BufferManager.cpp  Button.cpp  ButtonManager.cpp  Canva.cpp  CanvaManager.cpp  Cursor.cpp  CursorManager.cpp  Font.cpp  FontManager.cpp  Function.cpp  Image.cpp  KeyBoardManager.cpp  Label.cpp  LabelManager.cpp  MouseManager.cpp  RenderBuffer.cpp  Renderer.cpp  Shader.cpp  ShaderManager.cpp  Sprite.cpp  SpriteManager.cpp  TagManager.cpp  TextureManager.cpp  Triangle.cpp  Widget.cpp  Window.cpp  WindowManager.cpp  stbi.cpp
src/shaders/: GLSL.h.in  generate_shaders.cmake
src/shaders/fragment/: Buffer.glsl  Button.glsl  Canvas.glsl  Circle.glsl  Label.glsl  Rectangle.glsl  Sprite.glsl  StraightLine.glsl  TextInput.glsl  Triangle.glsl
src/shaders/vertex/: Buffer.glsl  Button.glsl  Canvas.glsl  Label.glsl  Sprite.glsl  Textinput.glsl  Triangle.glsl
src/shgui/: Buffer.cpp  BufferManager.cpp  Button.cpp  ButtonManager.cpp  Canva.cpp  CanvaManager.cpp  Cursor.cpp  CursorManager.cpp  Drawer.cpp  Font.cpp  FontManager.cpp  Function.cpp  Image.cpp  KeyBoardManager.cpp  Label.cpp  LabelManager.cpp  Monitor.cpp  MonitorManager.cpp  MouseManager.cpp  Renderer.cpp  ShaderManager.cpp  Sprite.cpp  SpriteManager.cpp  StraightLine.cpp  TaskManager.cpp  Texture.cpp  TextureManager.cpp  Tools.cpp  VertexArrayObject.cpp  Widget.cpp  Window.cpp  WindowManager.cpp  stbi.cpp
