[build-system]
requires = ["scikit-build-core>=0.3.3"]
build-backend = "scikit_build_core.build"

[project]
name = "hgui"
version = "4.0"
authors = [
    { name = "Horizon-NTH" },
]
description = "Python binding of HorizonGUI a graphical interface in c++ with OpenGl"
readme = "../README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: C++",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries"
]
keywords = [
    "hgui",
    "GUI Library",
    "User Interface Library",
    "Cross-platform GUI",
    "HorizonGUI",
    "Horizon UI Library",
    "Graphical User Interface Library",
    "UI Toolkit",
    "Horizon GUI Framework",
    "HorizonUI",
    "Modern UI Library",
    "Customizable UI Components",
    "GUI Development Kit",
    "GUI Design Framework",
    "GUI Widgets",
    "HorizonGUI Components",
    "HorizonUI Toolkit",
    "User Interface Components",
    "Horizon GUI Controls",
    "HorizonUI Elements",
    "Responsive UI Library"
]

[project.urls]
Homepage = "https://github.com/Horizon-NTH/HorizonGUI"
Repository = "https://github.com/Horizon-NTH/HorizonGUI"
Issues = "https://github.com/Horizon-NTH/HorizonGUI/issues"
Documentation = "https://github.com/Horizon-NTH/HorizonGUI/wiki"

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
cmake.verbose = true
logging.level = "INFO"
cmake.version = ">=3.15"
build-dir = "build"
wheel.license-files = ["../LICENSE"]